# practice-midterm2-aidandenlinger

./: .gitignore  Makefile  README.md  cabal.project  midterm2-practice.cabal  stack.yaml
.github/classroom/: autograding.json
src/Language/Nano2/: Desugar.hs  FoldTables.hs  Lexer.x  Parser.y  Reduce.hs  Types.hs
tests/: Test.hs
